<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/white"
android:orientation="vertical"
android:padding="10dp">
<com.skydoves.colorpickerview.ColorPickerView
android:id="@+id/colorPickerView"
android:layout_width="300dp"
android:layout_height="300dp"
android:layout_gravity="center_horizontal"
android:layout_marginTop="10dp"
app:actionMode="last"
app:alpha_flag="0.8"
app:alpha_selector="0.8"
app:palette="@drawable/palette"
app:preferenceName="MyColorPicker"
app:selector="@drawable/wheel" />
<LinearLayout
android:gravity="center_vertical"
android:layout_gravity="center_vertical"
android:layout_marginTop="10dp"
android:layout_weight="2"
android:weightSum="2"
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content">
<TextView
android:textSize="16sp"
android:textColor="@android:color/black"
android:text="@string/text_color_code"
android:layout_width="0dp"
android:layout_weight="1"
android:layout_height="wrap_content" />
<TextView
android:layout_gravity="center_vertical"
android:id="@+id/tvSelectedColorCode"
android:textSize="16sp"
android:textColor="@android:color/black"
android:layout_width="0dp"
android:layout_weight="1"
android:layout_height="wrap_content" />
</LinearLayout>
<LinearLayout
android:gravity="center_vertical"
android:layout_gravity="center_vertical"
android:layout_weight="2"
android:weightSum="2"
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content">
<TextView
android:text="@string/selected_color"
android:id="@+id/tvSelectedColorLabel"
android:layout_width="0dp"
android:layout_weight="1"
android:textSize="16sp"
android:textColor="@android:color/black"
android:layout_height="wrap_content" />
<LinearLayout
android:layout_marginRight="10dp"
android:orientation="horizontal"
android:id="@+id/llSelectedColor"
android:layout_width="0dp"
android:layout_weight="1"
android:layout_height="40dp">
</LinearLayout>
</LinearLayout>
<LinearLayout xmlns="http://schemas.android.com/apk/res-auto"
android:padding="10dp"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
android:weightSum="2"
android:layout_weight="2"
android:gravity="center"
android:orientation="horizontal">

<Button
android:id="@+id/btnOff"
android:layout_width="0dp"
android:layout_height="40dp"
android:layout_margin="5dp"
android:layout_weight="1"
android:backgroundTint="#E91E63"
android:backgroundTintMode="src_in"
android:padding="5dp"
android:text="@string/off"
android:textAllCaps="false"
android:textColor="@android:color/white"
android:textSize="14sp" />

<Button
android:id="@+id/btnOn"
android:layout_width="0dp"
android:layout_height="40dp"
android:layout_margin="5dp"
android:layout_weight="1"
android:backgroundTint="#4CAF50"
android:backgroundTintMode="src_in"
android:padding="5dp"
android:text="@string/on"
android:textAllCaps="false"
android:textColor="@android:color/white"
android:textSize="14sp"
app:strokeColor="#38A63D" />
</LinearLayout>
<TextView
android:textAllCaps="false"
android:id="@+id/tvLED_STATUS"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
android:gravity="center"
android:textColor="@android:color/holo_green_dark"
android:textSize="18sp"
android:textStyle="bold" />
<Button
android:id="@+id/sign_out"
style="?android:textAppearanceSmall"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="16dp"
android:background="@drawable/button_background"
android:text="@string/btn_sign_out"
android:textColor="@android:color/white"
android:textStyle="bold" />
</LinearLayout>